--- a/JustYou.html
+++ b/JustYou.html
@@ -20,6 +20,7 @@ blessings and these will spring me up among the grass, just as willows by the wa
 I am the first, I am the last, and beside me there's no one, says God of heaven.
 
 Isaiah 45
+<!--data:text/html, <html contenteditable>-->
 
 </body>
 <html>
